Fixed flex button issues on Firefox.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -188,6 +188,11 @@ body {
   background-color: transparent;
 }
 
+.turn {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
 .button__container > a > button {
   color: black;
   padding: 0.8rem 1.5rem;
